tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint128_2_random_one_more/serialized.ssz
i°!,‡]ФШ4ІZkNиµ'ґxOН"Мkµ.ћЄЫэф%¦Tђ«%аdСЈ